[package]
name = "website4share"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
futures = "0.3.31"
md5 = "0.7.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.1", features = ["fs"] }
